cabal-version:      2.4
name:               compiler
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             hydrogen602
maintainer:         hydrogen31415@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    ghc-options: 
        -j4 -Wall
    build-depends:
        base,
        array,
        mtl,
        containers,
        transformers,
        llvm-hs-pure,
        llvm-hs-pretty,
        text,
        string-transform
    hs-source-dirs:   src
    default-language: Haskell2010
    other-modules:
        Extras.Conversion
        Extras.FixedAnnotated
        Extras.Scope
        Extras.PrettyShow
        Extras.Position
        Extras.Misc
        IRGen.Basics
        IRGen.Types
        IRGen.MixedFunctions
        IRGen.Lib
        Types.Addon
        Types.Core
        Compat.Control.Monad.Error.Class
    exposed-modules:
        Token
        Grammar
        Lexer
        Core.CompileResult
        Core.AST
        Core.Classes
        Core.Literals
        Core.Types
        Core.Util
        IRGen.CodeGenIR


executable compiler
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0,
        transformers,
        compiler,
        containers,
        mtl,
        text,
        optparse-applicative,
        process
    hs-source-dirs:   exe
    default-language: Haskell2010
